<resources>
    <string name="app_name">Bulls&amp;Cows</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button">Check my fortune</string>
    <string name="tooSmallNumber">Not enough characters</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="delete">Delete</string>
    <string name="zeroFirstError">Zero cannot be the first number</string>
    <string name="sound_string">Music On/Off</string>
    <string name="too_much_numbers">Too much numbers</string>
</resources>
