<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainScreenActivity"
    android:weightSum="1"
    android:background="@drawable/background_port">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:maxLength="4"
            android:id="@+id/numbers"
            android:background="@color/material_deep_teal_200" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_check"
            android:text="@string/button"
            android:onClick="onBtnClick" />

    </LinearLayout>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/animationFrame"
        android:layout_gravity="center_horizontal"
        android:contentDescription=""
        android:layout_weight="1.01"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:id="@+id/grid"
        android:isScrollContainer="false"
        android:columnCount="3"
        android:rowCount="4"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:id="@+id/btnOne"
            android:layout_row="0"
            android:layout_column="0"
            android:visibility="visible"
            android:elegantTextHeight="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:id="@+id/btnTwo"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:id="@+id/btnThree"
            android:layout_row="0"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:id="@+id/btnFour"
            android:layout_row="1"
            android:layout_column="0"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:id="@+id/btnFive"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:id="@+id/btnSix"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:id="@+id/btnSeven"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:id="@+id/btnEight"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:id="@+id/btnNine"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/btnZero"
            android:layout_row="3"
            android:layout_column="0" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:text="@string/delete"
            android:id="@+id/btnDelete"
            android:layout_row="3"
            android:layout_column="1" />
    </GridLayout>

</LinearLayout>
